--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 aiohttp==3.8.6
 aiosignal==1.3.1
 altair==5.1.2
@@ -5,23 +6,27 @@ annotated-types==0.6.0
 anyio==3.7.1
 argostranslate==1.9.1
 async-timeout==4.0.3
+asyncer==0.0.2
 attrs==23.1.0
 backoff==2.2.1
 bcrypt==4.0.1
+bidict==0.22.1
 blinker==1.6.3
 cachetools==5.3.2
 certifi==2023.7.22
+chainlit==0.7.400
 charset-normalizer==3.3.1
 chroma-hnswlib==0.7.3
-chromadb==0.4.15
 click==8.1.7
 coloredlogs==15.0.1
 ctranslate2==3.20.0
-dataclasses-json==0.6.1
+dataclasses-json==0.5.14
 Deprecated==1.2.14
 diskcache==5.6.3
-fastapi==0.104.0
+fastapi==0.100.1
+fastapi-socketio==0.0.10
 filelock==3.12.4
+filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.0
 fsspec==2023.10.0
@@ -32,7 +37,9 @@ googleapis-common-protos==1.61.0
 greenlet==3.0.1
 grpcio==1.59.0
 h11==0.14.0
+httpcore==1.0.1
 httptools==0.6.1
+httpx==0.25.1
 huggingface-hub==0.17.3
 humanfriendly==10.0
 idna==3.4
@@ -47,6 +54,7 @@ jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
 langchain==0.0.323
 langsmith==0.0.52
+Lazify==0.4.0
 llama_cpp_python==0.2.11
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -56,14 +64,19 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nest-asyncio==1.5.8
 networkx==3.2
 nltk==3.8.1
+nodeenv==1.8.0
 numpy==1.26.1
 oauthlib==3.2.2
 onnxruntime==1.16.1
 opentelemetry-api==1.20.0
+opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
 opentelemetry-exporter-otlp-proto-grpc==1.20.0
+opentelemetry-exporter-otlp-proto-http==1.20.0
+opentelemetry-instrumentation==0.41b0
 opentelemetry-proto==1.20.0
 opentelemetry-sdk==1.20.0
 opentelemetry-semantic-conventions==0.41b0
@@ -72,20 +85,28 @@ packaging==23.2
 pandas==2.1.2
 Pillow==10.1.0
 posthog==3.0.2
+prisma==0.10.0
 protobuf==4.24.4
 pulsar-client==3.3.0
 pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pydantic==2.4.2
+pydantic==1.10.13
 pydantic_core==2.10.1
 pydeck==0.8.1b0
 Pygments==2.16.1
+PyJWT==2.8.0
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-engineio==4.8.0
+python-graphql-client==0.4.3
+python-multipart==0.0.6
+python-socketio==5.10.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
+redisvl==0.0.4
 referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
@@ -99,6 +120,7 @@ scikit-learn==1.3.2
 scipy==1.11.3
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
+simple-websocket==1.0.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
@@ -108,10 +130,14 @@ starlette==0.27.0
 streamlit==1.28.0
 streamlit-chat==0.1.1
 sympy==1.12
-tenacity==8.2.3
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==8.2.2
 threadpoolctl==3.2.0
 tokenizers==0.14.1
 toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.2
 toolz==0.12.0
 torch==2.1.0
 torchvision==0.16.0
@@ -123,13 +149,15 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
+uptrace==1.20.3
 urllib3==1.26.18
 uvicorn==0.23.2
 uvloop==0.19.0
 validators==0.22.0
-watchfiles==0.21.0
+watchfiles==0.20.0
 websocket-client==1.6.4
 websockets==12.0
 wrapt==1.15.0
+wsproto==1.2.0
 yarl==1.9.2
 zipp==3.17.0
