--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -17,22 +17,22 @@ services:
     build: ./
     command: chainlit run main_chainlid.py
     volumes:
-    - ./models/:/modles/
+      - ./models/:/modles/
     ports:
-    - 8000:8000
+      - 8000:8000
     environment:
       - DATABASE_URL=redis://redis:6379
       - MODEL_PATH=/modles/mistral-7B-v0.1/mistral-7b-instruct-v0.1.Q4_0.gguf
 
-  embdding-api:
-    image: quay.io/go-skynet/local-ai:latest
-    ports:
-      - 8080:8080
-    env_file:
-      - .env
-    volumes:
-      - ./models:/models:cached
-    command: ["/usr/bin/local-ai"]
+  # embdding-api:
+  #   image: quay.io/go-skynet  /local-ai:latest
+  #   ports:
+  #     - 8080:8080
+  #   env_file:
+  #     - .env
+  #   volumes:
+  #     - ./models:/models:cached
+  #   command: ["/usr/bin/local-ai"]
 
 
 
