--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
-langchain==0.0.323
+langchain==0.0.332
 langsmith==0.0.52
 Lazify==0.4.0
 llama_cpp_python==0.2.11
@@ -84,6 +84,7 @@ overrides==7.4.0
 packaging==23.2
 pandas==2.1.2
 Pillow==10.1.0
+pip-autoremove==0.10.0
 posthog==3.0.2
 prisma==0.10.0
 protobuf==4.24.4
