--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 8000:8000
     environment:
       - REDIS_URL=redis://redis:6379
+      - REDIS_COLLECTION=reports
       - MODEL_PATH=/modles/mistral-7B-v0.1/mistral-7b-instruct-v0.1.Q4_0.gguf
 
   # embdding-api:
