--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ ctranslate2==3.20.0
 dataclasses-json==0.5.14
 Deprecated==1.2.14
 diskcache==5.6.3
+distro==1.8.0
 fastapi==0.100.1
 fastapi-socketio==0.0.10
 filelock==3.12.4
@@ -71,6 +72,7 @@ nodeenv==1.8.0
 numpy==1.26.1
 oauthlib==3.2.2
 onnxruntime==1.16.1
+openai==1.2.2
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
