--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,8 @@ kubernetes==28.1.0
 langchain==0.0.316
 langsmith==0.0.52
 Lazify==0.4.0
-llama_cpp_python==0.2.11
+# llama_cpp_python
+# llama_cpp_python
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -153,7 +154,6 @@ tzlocal==5.2
 uptrace==1.20.3
 urllib3==1.26.18
 uvicorn==0.23.2
-uvloop==0.19.0
 validators==0.22.0
 watchfiles==0.20.0
 websocket-client==1.6.4
