--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,15 @@ services:
       retries: 5
       start_period: 5s
 
-  langchain-chat-app-init:
-        image: langchain-chat-app:latest
-        command: python init.py load --debug
-        volumes:
-          - ./models/:/modles/
-        environment:
-          - REDIS_URL=redis://redis:6379
-          - REDIS_COLLECTION=reports
+  # langchain-chat-app-init:
+  #       image: langchain-chat-app:latest
+  #       command: python init.py load --debug
+  #       volumes:
+  #         - ./models/:/modles/
+  #       environment:
+  #         - REDIS_URL=redis://redis:6379
+  #         - REDIS_COLLECTION=reports
+        
 
   langchain-chat-app:
     image: langchain-chat-app:latest
