add profile to docker compose initialize langchain-chat-app-init of initialize_database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
        environment:
          - REDIS_URL=redis://redis:6379
          - REDIS_COLLECTION=reports
+       profiles:
+         - initialize_database
+
 
   langchain-chat-app:
     image: langchain-chat-app:latest
