--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+aim==3.17.5
+aim-ui==3.17.5
+aimrecords==0.0.7
+aimrocks==0.4.0
 aiofiles==23.2.1
 aiohttp==3.8.6
 aiosignal==1.3.1
+alembic==1.12.1
 altair==5.1.2
 annotated-types==0.6.0
 anyio==3.7.1
@@ -9,16 +14,19 @@ async-timeout==4.0.3
 asyncer==0.0.2
 attrs==23.1.0
 backoff==2.2.1
+base58==2.0.1
 bcrypt==4.0.1
 bidict==0.22.1
 blinker==1.6.3
 cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 chainlit==0.7.400
 charset-normalizer==3.3.1
 chroma-hnswlib==0.7.3
 click==8.1.7
 coloredlogs==15.0.1
+cryptography==41.0.5
 ctranslate2==3.20.0
 dataclasses-json==0.5.14
 Deprecated==1.2.14
@@ -53,11 +61,11 @@ jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
-langchain==0.0.316
+langchain==0.0.332
 langsmith==0.0.52
 Lazify==0.4.0
-# llama_cpp_python
-# llama_cpp_python
+llama_cpp_python==0.2.11
+Mako==1.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -91,10 +99,13 @@ pip-autoremove==0.10.0
 posthog==3.0.2
 prisma==0.10.0
 protobuf==4.24.4
+psutil==5.9.6
 pulsar-client==3.3.0
+py3nvml==0.2.7
 pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
 pydantic==1.10.13
 pydantic_core==2.10.1
 pydeck==0.8.1b0
@@ -115,6 +126,7 @@ referencing==0.30.2
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+RestrictedPython==6.2
 rich==13.6.0
 rpds-py==0.10.6
 rsa==4.9
@@ -122,15 +134,18 @@ sacremoses==0.0.53
 safetensors==0.4.0
 scikit-learn==1.3.2
 scipy==1.11.3
+segment-analytics-python==2.2.3
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
 simple-websocket==1.0.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
-SQLAlchemy==2.0.22
+SQLAlchemy==1.4.50
 stanza==1.1.1
 starlette==0.27.0
+streamlit==1.28.0
+streamlit-chat==0.1.1
 sympy==1.12
 syncer==2.0.3
 tabulate==0.9.0
@@ -154,11 +169,13 @@ tzlocal==5.2
 uptrace==1.20.3
 urllib3==1.26.18
 uvicorn==0.23.2
+uvloop==0.19.0
 validators==0.22.0
 watchfiles==0.20.0
 websocket-client==1.6.4
 websockets==12.0
 wrapt==1.15.0
 wsproto==1.2.0
+xmltodict==0.13.0
 yarl==1.9.2
 zipp==3.17.0
