--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,8 @@ services:
       - REDIS_URL=redis://redis:6379
       - REDIS_COLLECTION=reports
       - MODEL_PATH=/modles/mistral-7B-v0.1/mistral-7b-instruct-v0.1.Q4_0.gguf
-      # - OPENAI_API_BASE=http://llm-api:8000/v1
-      - OPENAI_API_BASE=http://host.docker.internal:3000/v1
+      - OPENAI_API_BASE=http://llm-api:8000/v1
+      # - OPENAI_API_BASE=http://host.docker.internal:3000/v1
       - OPENAI_API_KEY="no need just for not exaption"
       # - VLLM_API_BASE=http://localhost:8000/v1
 
