--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
+aim==3.17.5
+aim-ui==3.17.5
+aimrecords==0.0.7
+aimrocks==0.4.0
 aiofiles==23.2.1
 aiohttp==3.8.6
 aiosignal==1.3.1
+alembic==1.12.1
 anyio==3.7.1
 async-timeout==4.0.3
 asyncer==0.0.2
 attrs==23.1.0
 backoff==2.2.1
+base58==2.0.1
 bidict==0.22.1
+cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 chainlit==0.7.400
 charset-normalizer==3.3.2
 click==8.1.7
 coloredlogs==15.0.1
+cryptography==41.0.5
 dataclasses-json==0.5.14
 Deprecated==1.2.14
 exceptiongroup==1.1.3
 fastapi==0.100.1
 fastapi-socketio==0.0.10
+filelock==3.13.1
 filetype==1.2.0
 frozenlist==1.4.0
 googleapis-common-protos==1.61.0
@@ -32,10 +42,11 @@ Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.0.316
-langsmith==0.0.63
 Lazify==0.4.0
+Mako==1.3.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+monotonic==1.6
 multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
@@ -52,23 +63,32 @@ opentelemetry-proto==1.21.0
 opentelemetry-sdk==1.21.0
 opentelemetry-semantic-conventions==0.42b0
 packaging==23.2
+Pillow==10.1.0
 prisma==0.10.0
 protobuf==4.25.0
+psutil==5.9.6
+py3nvml==0.2.7
+pycparser==2.21
 pydantic==1.10.13
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-engineio==4.8.0
 python-graphql-client==0.4.3
 python-multipart==0.0.6
 python-socketio==5.10.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 redisvl==0.0.4
 regex==2023.10.3
 requests==2.31.0
+RestrictedPython==7.0
+segment-analytics-python==2.2.3
 simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.23
+SQLAlchemy==1.4.50
 starlette==0.27.0
 syncer==2.0.3
 tabulate==0.9.0
@@ -86,5 +106,6 @@ watchfiles==0.20.0
 websockets==12.0
 wrapt==1.16.0
 wsproto==1.2.0
+xmltodict==0.13.0
 yarl==1.9.2
 zipp==3.17.0
